tests/specs/ecosystem/pup/plugin_web_interface/1_0_3.test
pup/plugin-web-interface/1.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@pup/plugin@^1.0.1": "jsr:@pup/plugin@1.0.1"
    },
    "jsr": {
      "@pup/plugin@1.0.1": {
        "integrity": "0ba5cfb8ea009c4b02736077bf60243e67604634b5aa4c6c23a51b67e3bed1f9"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'PluginImplementation'.
  public meta = {
         ~~~~
    at file://<tmpdir>/mod.ts:3:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'PluginImplementation'.
   */ public refreshApiToken(apiToken: string): Promise<void> {
             ~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:21:14

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'PluginImplementation'.
  public cleanup(): Promise<boolean> {
         ~~~~~~~
    at file://<tmpdir>/mod.ts:27:10

Found 3 errors.

